--- a/index.html
+++ b/index.html
@@ -316,26 +316,56 @@
         <div class="portfolio-gallery">
             <div class="portfolio-box mix front">
                 <div class="portfolio-content">
-                    <h3>Frontend</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id, eligendi.</p>
-                    <a href="#" class="readMore">Explore More</a>
+                    <h3>Amazon Clone</h3>
+                    <p>A visually appealing Amazon clone crafted with HTML and CSS, faithfully replicating the e-commerce giant's user interface and design.</p>
+                    <a href="https://bishwajeet02.github.io/AmazonClone/" class="readMore">Explore More</a>
                 </div>
                 <div class="portfolio-img">
-                    <img src="img/portfolio/1.jpg" alt="">
+                    <img src="https://tse3.mm.bing.net/th?id=OIP.YdkQGmhB9c2Sr84FeDD9egAAAA&pid=Api&P=0&h=220" alt="">
                 </div>
             </div>
 
             <div class="portfolio-box mix front">
                 <div class="portfolio-content">
-                    <h3>Frontend</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id, eligendi.</p>
-                    <a href="#" class="readMore">Explore More</a>
+                    <h3>FashionPlus</h3>
+                    <p>Fashionplus, an e-commerce website, meticulously crafted with HTML, CSS, and JavaScript, boasting trendy designs and seamless shopping experiences for fashion enthusiasts.</p>
+                    <a href="https://bishwajeet02.github.io/FashionPlus/" class="readMore">Explore More</a>
                 </div>
                 <div class="portfolio-img">
-                    <img src="img/portfolio/6.jpg" alt="">
+                    <img src="https://tse4.mm.bing.net/th?id=OIP.ZbP3SFRdKs9-9OwxsS1ymQHaHa&pid=Api&P=0&h=220" alt="">
+                </div>
+            </div>
+            <div class="portfolio-box mix front">
+                <div class="portfolio-content">
+                    <h3>Fitness Plus</h3>
+                    <p>"Dynamic gym landing page combining HTML, CSS, and JS for an immersive fitness experience. Get fit, stay motivated!".</p>
+                    <a href="https://bishwajeet02.github.io/GymLandingPage/" class="readMore">Explore More</a>
+                </div>
+                <div class="portfolio-img">
+                    <img src="https://tse3.mm.bing.net/th?id=OIP.UEsuIrvcsjf6lPNz_Ru0tAHaHC&pid=Api&P=0&h=220" alt="">
                 </div>
             </div>
 
+            <div class="portfolio-box mix front">
+                <div class="portfolio-content">
+                    <h3>TinDog</h3>
+                    <p>"Tindog: Where pup love meets tech. Bootstrap-powered landing page for dog lovers. Swipe, connect, and bark up the right tree!"</p>
+                    <a href="https://bishwajeet02.github.io/TindogLandingPage/" class="readMore">Explore More</a>
+                </div>
+                <div class="portfolio-img">
+                    <img src="https://tse1.mm.bing.net/th?id=OIP.3K8DVHnXMiaiDu2iqb0ocAHaCv&pid=Api&P=0&h=220" alt="">
+                </div>
+            </div>
+            <div class="portfolio-box mix front">
+                <div class="portfolio-content">
+                    <h3>DrumKit</h3>
+                    <p>"Interactive drum kit crafted with HTML, CSS, and JS. Tap into rhythm and unleash beats with this dynamic web experience."</p>
+                    <a href="https://bishwajeet02.github.io/DrumKit/" class="readMore">Explore More</a>
+                </div>
+                <div class="portfolio-img">
+                    <img src="https://tse3.mm.bing.net/th?id=OIP.L6zXK6O6mCuLlCtrIWknrAHaHa&pid=Api&P=0&h=220" alt="">
+                </div>
+            </div>
             <div class="portfolio-box mix full">
                 <div class="portfolio-content">
                     <h3>FullStack Development</h3>
@@ -358,33 +388,34 @@
             </div>
             <div class="portfolio-box mix front">
                 <div class="portfolio-content">
-                    <h3>Frontend</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id, eligendi.</p>
-                    <a href="#" class="readMore">Explore More</a>
+                    <h3>Meesho Landing-Page</h3>
+                    <p>A Meesho-inspired clone showcasing HTML and CSS skills, mirroring the platform's layout and design for e-commerce emulation.</p>
+                    <a href="https://bishwajeet02.github.io/Meesho/" class="readMore">Explore More</a>
                 </div>
                 <div class="portfolio-img">
-                    <img src="img/portfolio/6.jpg" alt="">
+                    <img src="https://tse3.mm.bing.net/th?id=OIP.Etbi_msAR81Iy6945pAUbwHaHa&pid=Api&P=0&h=220" alt="">
                 </div>
             </div>
 
             <div class="portfolio-box mix front">
                 <div class="portfolio-content">
-                    <h3>Frontend</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id, eligendi.</p>
-                    <a href="#" class="readMore">Explore More</a>
+                    <h3>CalculatorApp</h3>
+                    <p>
+                        A sleek calculator app developed with HTML, CSS, and JavaScript, offering intuitive functionality and stylish design for efficient calculations.</p>
+                    <a href="https://bishwajeet02.github.io/CalculatorApp/" class="readMore">Explore More</a>
                 </div>
                 <div class="portfolio-img">
-                    <img src="img/portfolio/6.jpg" alt="">
+                    <img src="https://tse3.mm.bing.net/th?id=OIP.850pk3DTXyQdxCgBgUtCSQHaHa&pid=Api&P=0&h=220" alt="">
                 </div>
             </div>
             <div class="portfolio-box mix front">
                 <div class="portfolio-content">
-                    <h3>Frontend</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id, eligendi.</p>
-                    <a href="#" class="readMore">Explore More</a>
+                    <h3>SimonGame</h3>
+                    <p>A captivating Simon game replica fashioned with HTML, CSS, and JavaScript, delivering nostalgic gameplay and interactive fun for users.</p>
+                    <a href="https://bishwajeet02.github.io/Simon-Game/" class="readMore">Explore More</a>
                 </div>
                 <div class="portfolio-img">
-                    <img src="img/portfolio/6.jpg" alt="">
+                    <img src="https://tse3.mm.bing.net/th?id=OIP.Ps-AXKqQ-4FbsXWjI9XUUwHaHa&pid=Api&P=0&h=220" alt="">
                 </div>
             </div>
         </div>
@@ -506,15 +537,23 @@
     <span>GET IN TOUCH WITH ME</span>
 </div>
 
-<form action="#">
+<form action="https://api.web3forms.com/submit" method="POST">
+
+
+  
+    <input type="hidden" name="access_key" value="3fcf2b92-e9b5-407f-a32c-d68f4f707046">
+
 <div class="input-box">
-<input type="text" placeholder="First Name">
-<input type="text" placeholder="Last Name">
+    
+  
+<input type="text" placeholder="First Name" name="First-name">
+<input type="text" placeholder="Last Name" name="last-name">
 
 </div>
 
-<input type="email" placeholder="Email">
-<input type="text" placeholder="Subject">
+
+<input type="email" placeholder="Email" value="" name="email">
+<input type="text" placeholder="Subject" name="text">
 <textarea name="#" id="" cols="30" rows="10">
  
 </textarea>
